<resources>
    <string name="app_name">BasicLoginApp</string>
    <string name="login">Iniciar Sesión</string>
    <string name="text_register">Registrarse</string>
    <string name="hint_username">Nombre Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="hint_password2">Repetir Contraseña</string>
    <string name="button_newtask">Añadir Tarea</string>
    <string name="title_newtask">Crear nueva tarea</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_task_title">Titulo</string>
    <string name="text_fichero">Subir imagen</string>
</resources>
