<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTareaActivity">

    <TextView
        android:id="@+id/textViewTituloAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/title_newtask"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewAddTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_task_title"
        app:layout_constraintEnd_toEndOf="@+id/textViewTituloAct"
        app:layout_constraintStart_toStartOf="@+id/textViewTituloAct"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloAct" />

    <EditText
        android:id="@+id/textViewAddDescripcion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_description"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewAddTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddTitle" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_newtask"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddDescripcion"
        app:layout_constraintStart_toStartOf="@+id/textViewAddDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>